--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .idea/
 myvenv/
-mysite/db.sqlite3
-mysite/manage.py
-mysite/client/migrations
-mysite/client/__pycache__
-mysite/client/__init__.py
-mysite/mysite/__pycache__
-mysite/mysite/__init__.py
-mysite/media/
+db.sqlite3
+manage.py
+client/migrations
+client/__pycache__
+client/__init__.py
+steganography/__pycache__
+steganography/__init__.py
+media/
+
